--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
     <header class="container">
         <div class="logo">
-            <img src="image/0_index/logo_w.png" alt="Kolinberg Philharmonic Logo">
+            <a href="index.html"><img src="image/0_index/logo_w.png" alt="Kolinberg Philharmonic Logo"></a>
         </div>
         <nav class="nav_18px">
             <ul class="nav_list">
-                <li><a href="/about">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="/tickets">TICKET</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="/shop">SHOP</a></li>
+                <li><a href="product.html">SHOP</a></li>
                 <li><a href="/support">SUPPORT</a></li>
             </ul>
         </nav>
@@ -44,8 +44,8 @@
             <img src="image/0_index/bg_cut_compressed.jpg" alt="">
         </div>
         <div class="bglinear">
-            <img src="image/0_index/linear_top.png" alt="">
-            <img src="image/0_index/linear_btm.png" alt="">
+            <img class="top" src="image/0_index/linear_top.png" alt="">
+            <img class="bottom" src="image/0_index/linear_btm.png" alt="">
         </div>
         <div class="hero_title">
             <h1>Discover Distinction</h1>
@@ -185,7 +185,7 @@
     <footer>
         <div class="container">
             <div class="logo">
-                <img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo">
+                <a href="index.html"><img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo"></a>
             </div>
             <div class="social_links">
                 <a href="https://www.facebook.com/">
@@ -208,10 +208,10 @@
             </div>
             <nav class="nav_18px">
                 <ul class="nav_list">
-                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="/tickets">TICKET</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="/shop">SHOP</a></li>
+                    <li><a href="product.html">SHOP</a></li>
                     <li><a href="/support">SUPPORT</a></li>
                 </ul>
             </nav>
