--- a/news.html
+++ b/news.html
@@ -21,14 +21,14 @@
 <body class="general">
     <header class="container">
         <div class="logo">
-            <img src="image/share_item/logo_b.png" alt="Kolinberg Philharmonic Logo">
+            <a href="index.html"><img src="image/share_item/logo_b.png" alt="Kolinberg Philharmonic Logo"></a>
         </div>
         <nav class="nav_18px">
             <ul class="nav_list">
-                <li><a href="/about">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="/tickets">TICKET</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="/shop">SHOP</a></li>
+                <li><a href="product.html">SHOP</a></li>
                 <li><a href="/support">SUPPORT</a></li>
             </ul>
         </nav>
@@ -172,7 +172,7 @@
     <footer>
         <div class="container">
             <div class="logo">
-                <img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo">
+                <a href="index.html"><img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo"></a>
             </div>
             <div class="social_links">
                 <a href="https://www.facebook.com/">
@@ -195,10 +195,10 @@
             </div>
             <nav class="nav_18px">
                 <ul class="nav_list">
-                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="/tickets">TICKET</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="/shop">SHOP</a></li>
+                    <li><a href="product.html">SHOP</a></li>
                     <li><a href="/support">SUPPORT</a></li>
                 </ul>
             </nav>
