--- a/news_content.html
+++ b/news_content.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Live recording of Mahler’s Symphony No. 8 with James - Kolinberg Philharmonic Official Website</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,14 +20,14 @@
 <body class="general">
     <header class="container">
         <div class="logo">
-            <img src="image/share_item/logo_b.png" alt="Kolinberg Philharmonic Logo">
+            <a href="index.html"><img src="image/share_item/logo_b.png" alt="Kolinberg Philharmonic Logo"></a>
         </div>
         <nav class="nav_18px">
             <ul class="nav_list">
-                <li><a href="/about">ABOUT</a></li>
+                <li><a href="about.html">ABOUT</a></li>
                 <li><a href="/tickets">TICKET</a></li>
                 <li><a href="news.html">NEWS</a></li>
-                <li><a href="/shop">SHOP</a></li>
+                <li><a href="product.html">SHOP</a></li>
                 <li><a href="/support">SUPPORT</a></li>
             </ul>
         </nav>
@@ -120,7 +120,7 @@
     <footer>
         <div class="container">
             <div class="logo">
-                <img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo">
+                <a href="index.html"><img src="image/share_item/logo_w.png" alt="Kolinberg Philharmonic Logo"></a>
             </div>
             <div class="social_links">
                 <a href="https://www.facebook.com/">
@@ -143,10 +143,10 @@
             </div>
             <nav class="nav_18px">
                 <ul class="nav_list">
-                    <li><a href="/about">ABOUT</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="/tickets">TICKET</a></li>
                     <li><a href="news.html">NEWS</a></li>
-                    <li><a href="/shop">SHOP</a></li>
+                    <li><a href="product.html">SHOP</a></li>
                     <li><a href="/support">SUPPORT</a></li>
                 </ul>
             </nav>
