--- a/product_content.html
+++ b/product_content.html
@@ -26,10 +26,10 @@
         <nav class="nav_18px">
             <ul class="nav_list">
                 <li><a href="about.html">ABOUT</a></li>
-                <li><a href="/tickets">TICKET</a></li>
+                <li><a href="program.html">TICKET</a></li>
                 <li><a href="news.html">NEWS</a></li>
                 <li><a href="product.html">SHOP</a></li>
-                <li><a href="/support">SUPPORT</a></li>
+                <li><a href="membership.html">SUPPORT</a></li>
             </ul>
         </nav>
         <div class="function_list">
@@ -203,10 +203,10 @@
             <nav class="nav_18px">
                 <ul class="nav_list">
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="/tickets">TICKET</a></li>
+                    <li><a href="program.html">TICKET</a></li>
                     <li><a href="news.html">NEWS</a></li>
                     <li><a href="product.html">SHOP</a></li>
-                    <li><a href="/support">SUPPORT</a></li>
+                    <li><a href="membership.html">SUPPORT</a></li>
                 </ul>
             </nav>
             <div class="divider"></div>
