mid-presentation 20Nov2025

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <div class="hero_title">
             <h1>Discover Distinction</h1>
         </div>
-        <div class="calendar_button">
-            View Calendar</div>
+        <a href="program.html"><div class="calendar_button">
+            View Calendar</div></a>
     </section>
 
 
@@ -65,8 +65,8 @@
                     <p class="lg_20px">James calls Mahler’s Seventh a “cosmic symphony,” moving from chaos to glory.
                         Known as the "Song of
                         the Night," James leads the Kolinberg Philharmonic in this colossal opus.</p>
-                    <div class="program_button">
-                        View Program </div>
+                    <a href="program.html"><div class="program_button">
+                        View Program </div></a>
                 </div>
                 <div class="campaign_photo col-6">
                     <img src="image/0_index/campaign_pic_1.jpg" alt="">
@@ -80,45 +80,54 @@
                 <!-- <div class="title">
                 <h2>LATEST NEWS</h2>
             </div> -->
-                <div class="news_card">
-                    <div class="news_photo">
-                        <img src="image/0_index/news_pic_1.jpg" alt="">
+                <a href="news_content.html">
+                    <div class="news_card">
+                        <div class="news_photo">
+                            <img src="image/0_index/news_pic_1.jpg" alt="">
+                        </div>
+                        <div class="news_content">
+                            <span class="card_date">16 Oct. 2025</span>
+                            <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                            <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No.
+                                8
+                                will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                                Festival
+                                in Amsterdam, the album will be available digitally worldwide.</p>
+                        </div>
                     </div>
-                    <div class="news_content">
-                        <span class="card_date">16 Oct. 2025</span>
-                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
-                            Festival
-                            in Amsterdam, the album will be available digitally worldwide.</p>
+                </a>
+                <a href="news_content.html">
+                    <div class="news_card">
+                        <div class="news_photo">
+                            <img src="image/0_index/news_pic_1.jpg" alt="">
+                        </div>
+                        <div class="news_content">
+                            <span class="card_date">16 Oct. 2025</span>
+                            <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                            <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No.
+                                8
+                                will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                                Festival
+                                in Amsterdam, the album will be available digitally worldwide.</p>
+                        </div>
                     </div>
-                </div>
-                <div class="news_card">
-                    <div class="news_photo">
-                        <img src="image/0_index/news_pic_1.jpg" alt="">
+                </a>
+                <a href="news_content.html">
+                    <div class="news_card">
+                        <div class="news_photo">
+                            <img src="image/0_index/news_pic_1.jpg" alt="">
+                        </div>
+                        <div class="news_content">
+                            <span class="card_date">16 Oct. 2025</span>
+                            <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                            <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No.
+                                8
+                                will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                                Festival
+                                in Amsterdam, the album will be available digitally worldwide.</p>
+                        </div>
                     </div>
-                    <div class="news_content">
-                        <span class="card_date">16 Oct. 2025</span>
-                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
-                            Festival
-                            in Amsterdam, the album will be available digitally worldwide.</p>
-                    </div>
-                </div>
-                <div class="news_card">
-                    <div class="news_photo">
-                        <img src="image/0_index/news_pic_1.jpg" alt="">
-                    </div>
-                    <div class="news_content">
-                        <span class="card_date">16 Oct. 2025</span>
-                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
-                            Festival
-                            in Amsterdam, the album will be available digitally worldwide.</p>
-                    </div>
-                </div>
+                </a>
             </div>
         </section>
     </section>
@@ -127,39 +136,44 @@
         <div class="container">
             <div class="text col-4">
                 <h2 class="xl_52px">WEBSHOP</h2>
-                <p class="lg_20px">Browse and purchase exclusive merchandise, including our latest recordings, video
+                <p class="description lg_20px">Browse and purchase exclusive merchandise, including our latest recordings, video
                     releases, and a curated selection of official collaboration items to bring the joy of music home
                     with you.</p>
-                <div class="btn lg_24px">View All</div>
+                <a href="product.html"><div class="btn lg_24px">View All</div></a>
             </div>
             <div class="cardlist col-8">
-                <div class="card">
-                    <div class="cardpic">
-                        <img src="image/0_index/product_pic_1.jpg" alt="">
-                    </div>
-                    <div class="cardtext">
-                        <span class="product_cat">ALBUM</span>
-                        <h3 class="lg_24px">New Year's Concert</h3>
-                        <p class="md_16px">Pre-order the 2025 New Year Concert official recording with Kolinberg. </p>
-                        <div class="icon">
-                            <i class="fa-solid fa-arrow-right"></i>
+                <a href="product_content.html">
+                    <div class="card">
+                        <div class="cardpic">
+                            <img src="image/0_index/product_pic_1.jpg" alt="">
+                        </div>
+                        <div class="cardtext">
+                            <span class="product_cat">ALBUM</span>
+                            <h3 class="lg_24px">New Year's Concert</h3>
+                            <p class="md_16px">Pre-order the 2025 New Year Concert official recording with Kolinberg.
+                            </p>
+                            <div class="icon">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card">
-                    <div class="cardpic">
-                        <img src="image/0_index/product_pic_1.jpg" alt="">
-                    </div>
-                    <div class="cardtext">
-                        <span class="product_cat">ALBUM</span>
-                        <h3 class="lg_24px">New Year's Concert</h3>
-                        <p class="md_16px">Pre-order the 2025 New Year Concert official recording with Kolinberg. </p>
-                        <div class="icon">
-                            <i class="fa-solid fa-arrow-right"></i>
+                </a>
+                <a href="product_content.html">
+                    <div class="card">
+                        <div class="cardpic">
+                            <img src="image/0_index/product_pic_1.jpg" alt="">
+                        </div>
+                        <div class="cardtext">
+                            <span class="product_cat">ALBUM</span>
+                            <h3 class="lg_24px">New Year's Concert</h3>
+                            <p class="md_16px">Pre-order the 2025 New Year Concert official recording with Kolinberg.
+                            </p>
+                            <div class="icon">
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </div>
                         </div>
                     </div>
-                </div>
-
+                </a>
             </div>
         </div>
 
