--- a/news.html
+++ b/news.html
@@ -43,106 +43,124 @@
     </section>
     <section class="content container">
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <div class="cardwrap_news_list container">
-            <div class="card_news_list row">
-                <div class="card_pic col-4">
-                    <img src="image/3_news/news_464_309.jpg" alt="">
-                </div>
-                <div class="card_text col-8">
-                    <span class="card_date">16 Oct. 2025</span>
-                    <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
-                    <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
-                        will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler Festival
-                        in Amsterdam, the album will be available digitally worldwide.</p>
-                    <div class="card_icon">
-                        <i class="fa-solid fa-arrow-right"></i>
+            <a href="news_content.html">
+                <div class="card_news_list row">
+                    <div class="card_pic col-4">
+                        <img src="image/3_news/news_464_309.jpg" alt="">
+                    </div>
+                    <div class="card_text col-8">
+                        <span class="card_date">16 Oct. 2025</span>
+                        <h3 class="card_title lg_24px">Live recording of Mahler’s Symphony No. 8 with James</h3>
+                        <p class="md_16px">Kolinberg Philharmonic and James' live recording of Mahler's Symphony No. 8
+                            will be released by Decca Classics on 7 November 2025. Captured during the 2025 Mahler
+                            Festival
+                            in Amsterdam, the album will be available digitally worldwide.</p>
+                        <div class="card_icon">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </a>
         </div>
         <nav class="pagination col-12">
             <ul class="list">
